@@ -112,6 +112,8 @@ Changes since 2.1.3
     version (slang-3) where SLFUTURE_CONST will be defined to be
     `const'.  The use of `const' now would constitute a major API change,
     which is not permitted until a new major version is released.
+51. src/slmisc.c: SLFUTURE_CONST added to SLextract_list_element
+    prototype.
 
 {{{ Previous Versions
 
